<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingBottom="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/sort_selection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/sort_by_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/title"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/sort_by_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/author"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/sort_by_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/publisher"
                android:textSize="18sp" />

        </RadioGroup>
    </LinearLayout>


    <Switch
        android:id="@+id/sort_by_sequence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:checked="false"
        android:showText="false"
        android:splitTrack="false"
        android:text="Switch"
        android:textOff="@string/ascending"
        android:textOn="@string/descending"
        android:textSize="18sp"
        tools:checked="false" />

    <Button
        android:id="@+id/sort_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/design_default_color_primary"
        android:backgroundTint="@color/colorPrimaryDark"
        android:backgroundTintMode="src_over"
        android:text="Sort"
        android:textColor="@android:color/background_light" />

</LinearLayout>
